# verdad

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.generic_recording_worker  Dockerfile.prefect  Dockerfile.processing_worker  Dockerfile.recording_worker  Dockerfile.searxng  README.md  docker-compose.yml  fly.dev.toml  fly.generic_recording_worker.toml  fly.prefect.toml  fly.processing_worker.toml  fly.recording_worker.toml  fly.searxng.toml  fly.toml  plan.md  pyproject.toml  requirements.txt
.gemini/: settings.json
docs/: PROMPT_REWRITER_AGENT_PROPOSAL.md  PROMPT_REWRITER_IMPLEMENTATION_ROADMAP.md  STAGE_1_DEEP_DIVE.md  TESTING_GUIDE.md  index.md
hooks/: install-hooks.sh  pre-push
prompts/: Gemini_timestamped_transcription_generation_prompt.md  Stage_1-heuristics.txt  Stage_1-output_schema.json  Stage_1-output_schema.txt  Stage_1-system-instruction.md  Stage_1_Preprocess_detection_prompt.md  Stage_1_Preprocess_output_schema.json  Stage_1_Preprocess_system_instruction.md  Stage_1_Preprocess_transcription_prompt.md  Stage_1_detection-prompt.md  Stage_1_detection_prompt.md  Stage_1_heuristics.md  Stage_1_output_schema.json  Stage_2-output_schema.txt  Stage_2_analysis-prompt.md  Stage_2_analysis-prompt.txt  Stage_3-heuristics.md  Stage_3-output_schema.json  Stage_3_analysis-prompt.md  Stage_3_analysis_prompt.md  Stage_3_heuristics.md  Stage_3_output_schema.json  Stage_3_system_instruction.md  Stage_4_output_schema.json  Stage_4_review_prompt.md  Timestamped_transcription_generation_output_schema.json  Timestamped_transcription_generation_prompt.md
reports/: 2026-03-16_downvote_kb_review.md
scripts/: coverage.sh  generic_recording.sh  (+11 more)
(+236 files in other folders)
